fix: position 조회 로직